--- a/template/package.json
+++ b/template/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconscout/react-unicons": "^1.1.6",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -15,7 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-feather": "^2.0.9",
-    "react-intl": "^5.24.4",
+    "react-intl": "^5.24.6",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5",
