--- a/template/package.json
+++ b/template/package.json
@@ -13,6 +13,9 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "antd": "^4.18.5",
+    "dotenv": "^16.0.0",
+    "firebase": "^9.6.7",
+    "firebase-tools": "^10.2.2",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
